# chai-mlx

./: .gitignore  .gitmodules  HANDOFF.md  LICENSE  NOTICE  README.md  drift_attribution.md  pyproject.toml
.github/workflows/: tests.yml
assets/: 01_high_level_pipeline.dot  02_feature_embedding.dot  03_token_input_embedder.dot  04_trunk_overview.dot  05_template_embedder.dot  06_msa_module.dot  07_pairformer_block.dot  08_diffusion_module.dot  09_diffusion_transformer_block.dot  10_confidence_head.dot  11_blocked_local_attention.dot  12_diffusion_sampling.dot
chai1_mlx_port/: README.md  pyproject.toml
chai1_mlx_port/docs/: README.md  featurization_audit.md  kernel_plan.md  remaining_optimizations_plan.md  status.md  weight_mapping.md
chai1_mlx_port/scripts/: convert_weights.py
chai1_mlx_port/src/chai1_mlx/: __init__.py  api.py  confidence.py  config.py  diffusion.py  embeddings.py  featurize.py  ranking.py  trunk.py  types.py  utils.py
chai1_mlx_port/src/chai1_mlx/data/: __init__.py  collate.py  embeddings.py  feature_generators.py  msa.py  parsing.py  residue_constants.py  structure.py  templates.py
chai1_mlx_port/src/chai1_mlx/examples/: benchmark_diffusion.py  run_pipeline.py  test_featurize_fasta.py  validate_parity.py
chai1_mlx_port/src/chai1_mlx/kernels/: __init__.py  blocked_local_attention.py  elementwise.py  sources.py
chai1_mlx_port/src/chai1_mlx/layers/: __init__.py  atom_attention.py  attention.py  common.py  pairformer.py  triangle.py
chai1_mlx_port/src/chai1_mlx/weights/: __init__.py  convert_to_safetensors.py  export_torchscript.py  load.py  name_map.py  validate.py
chai_mlx/: __init__.py  config.py  utils.py
chai_mlx/cli/: __init__.py  infer.py  precompute_esm_impl.py  sweep_impl.py
chai_mlx/data/: __init__.py  _rdkit_timeout_patch.py  esm_mlx_adapter.py  fasta.py  featurize.py  types.py
chai_mlx/io/: __init__.py
chai_mlx/io/weights/: __init__.py  convert_npz.py  convert_to_safetensors.py  convert_torchscript.py  load.py  name_map.py  validate.py
chai_mlx/model/: __init__.py  api.py  confidence.py  core.py  diffusion.py  embeddings.py  ranking.py  trunk.py
chai_mlx/nn/: __init__.py
chai_mlx/nn/kernels/: elementwise.py  sources.py
chai_mlx/nn/layers/: atom_attention.py  attention.py  common.py  (+2 more)
cuda_harness/: __init__.py  _probe_einsum_accum.py  _probe_first_block_compare.py  _probe_first_block_cuda.py  _probe_first_block_mlx.py  _probe_first_block_ts_cuda.py  _probe_full_stack_compare.py  _probe_full_stack_cuda.py  _probe_full_stack_mlx.py  _probe_full_trunk_eager.py  _probe_jit_precision.py  _probe_msa_boundary_cuda.py  _probe_msa_module_cuda.py  _probe_msa_rounds_compare.py  _probe_msa_rounds_mlx.py  _probe_real_inputs_cuda.py  _probe_real_inputs_mlx.py  _probe_recycle_mlx.py  _probe_sdpa_variants.py  _probe_tri_attn_isolated.py  _probe_trunk_methods.py  _probe_trunk_submodule_call.py  bench_throughput.py  modal_common.py  run_determinism.py  run_expanded_targets.py  run_intermediates.py  run_reference.py  smoke_test.py
cuda_harness/constraints/: 1CRN_all_three.csv  UBQG_glycan.csv
docs/: README.md  architecture.md  bf16_plan.md  featurization_audit.md  kernel_plan.md  matmul_tiling_divergence.md  numerical_divergence.md  status.md  trunk_investigation_handoff_2026-04-14.md  trunk_investigation_handoff_2026-04-14b.md
examples/: basic_inference.py  benchmark_diffusion.py  diffusion_benchmark.py  fasta_smoke.py  featurize_fasta.py  validate_parity.py
findings/: ARCHITECTURE.md  OPTIMIZATIONS.md  PORT.md  SCRATCHPAD.md
findings/assets/: 1_pipeline_overview.dot  2_feature_embedding.dot  3_token_input_embedder.dot  4_trunk.dot  5_diffusion_module.dot  6_confidence_ranking.dot  7_building_blocks.dot  8_blocked_attention.dot
findings/graphs/: README.md  bond_loss_input_proj.txt  bond_loss_input_proj_forward256.py  bond_loss_input_proj_toplevel_code.txt  confidence_head.txt  confidence_head_code.txt  confidence_head_forward256.py  confidence_head_toplevel_code.txt  diffusion_module_code.txt  diffusion_module_forward256.py  diffusion_module_toplevel_code.txt  feature_embedding.txt  feature_embedding_code.txt  feature_embedding_forward256.py  feature_embedding_toplevel_code.txt  token_embedder.txt  token_embedder_code.txt  token_embedder_forward256.py  token_embedder_toplevel_code.txt  trunk_code.txt  trunk_forward256.py
frontend/app/: layout.tsx  page.tsx
scripts/: bisect_denoise.py  cache_conditioning_divergence.py  chai_lab_reference_dump.py  cif_seed_sweep.py  compare_vs_pdb.py  convert_weights.py  cuda_constraints_parity.py  cuda_determinism_report.py  cuda_error_accumulation.py  cuda_mlx_diffusion_isolation.py  cuda_parity.py  cuda_structure_sweep.py  deep_denoise_trace.py  diffusion_diagnostics.py  downstream_reference_trace.py  error_diagnostics.py  granular_reference_dump.py  inference.py  kernel_microbench.py  layer_parity.py  memory_estimate.py  mlx_scaling_bench.py  mlx_throughput.py  pair_path_probe.py  parity_check.py  per_op_divergence.py  precision_experiments.py  precompute_esm_mlx.py  proof_of_life.py  report_throughput_comparison.py  run_mlx_sweep.py  run_t2_parity.py  sampler_step_trace.py  spawn_cuda_sweep.py  stage_isolation_parity.py  structural_validation.py  summarise_vs_pdb.py  trunk_block_trace.py  ts_block_reference.py  weight_loading_e2e.py
tests/: conftest.py  helpers.py  test_attention.py  test_chai_lab_api_contract.py  test_console_scripts_non_editable.py  test_constraints_parse.py  test_cuda_parity_compare.py  test_determinism.py  test_diffusion.py  test_embeddings.py  test_end_to_end.py  test_esm_mlx_adapter.py  test_esm_mlx_ram_guard.py  test_fasta_validate.py  test_featurize.py  test_glycan_featurize.py  test_inference_cli.py  test_input_limits.py  test_integration_infer.py  test_minimum_versions.py  test_msa_subsample.py  test_multimer_featurize.py  test_nucleic_acid_featurize.py  test_pad_strategy.py  test_ranking.py  test_rna_featurize.py  test_t1_cli_surface.py  test_t1_per_token_npz.py  test_t1_trunk_subsample_e2e.py  test_trunk.py  test_utils.py  test_weight_loading.py
