[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chai-mlx"
version = "0.1.0"
description = "MLX inference port of Chai-1 with a clean pipeline API and reusable tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Joseph Jojoe" }]
keywords = ["mlx", "protein-folding", "structure-prediction", "apple-silicon", "chai-1"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  # chai-lab pulls in numba for MSA parsing, and current numba wheels reject
  # NumPy 2.4+. Keep the resolver on a mutually compatible range until the
  # upstream stack lifts that cap.
  "numpy>=1.26,<2.4",
  "huggingface_hub>=0.28",
  "mlx>=0.16",
  # Default install is inference-ready: plain ``pip install chai-mlx`` /
  # ``pip install -e .`` should be enough for first-time users to run the
  # FASTA CLI without learning extras first.
  "torch>=2.0",
  # Pinned to the same commit the Modal image uses
  # (cuda_harness/modal_common.py). This is post-v0.6.1 main + PR #360's
  # ``_component_moved_to`` helper + PR #415's gemmi-0.7 support. The
  # bare PyPI ``chai_lab`` drifts away from this API over time, so keep the
  # base install pinned to the known-good commit.
  "chai_lab @ git+https://github.com/chaidiscovery/chai-lab@61036259c98222160963cb780750e354876ce485",
]

[project.urls]
Homepage = "https://github.com/josephjojoe/chai-mlx"
Repository = "https://github.com/josephjojoe/chai-mlx"
Issues = "https://github.com/josephjojoe/chai-mlx/issues"

[project.optional-dependencies]
# Backward-compatible no-op aliases for older docs / local workflows. The
# full FASTA inference stack now lives in the base dependencies above.
inference = []
featurize = []
convert = [
  "safetensors>=0.4",
]
test = [
  "pytest",
]
esm = [
  # ``file://./esm-mlx`` only resolves when installing from a clone with
  # the submodule present at ./esm-mlx relative to the install-time cwd.
  # Switch to a pinned git URL so ``pip install chai-mlx[esm]`` works
  # from PyPI / bare git installs too. Commit is the same one
  # .gitmodules tracks.
  "esm-mlx @ git+https://github.com/josephjojoe/esm-mlx@8d9adf42fc2b6745d807978ef590d70184f79531",
]
cuda-harness = [
  "modal>=1.3",
  "gemmi>=0.7",
  "biopython>=1.84",
]

[project.scripts]
chai-mlx-infer = "chai_mlx.cli.infer:main"
chai-mlx-precompute-esm = "chai_mlx.cli.precompute_esm_impl:main"
chai-mlx-sweep = "chai_mlx.cli.sweep_impl:main"
chai-mlx-export-torchscript = "chai_mlx.io.weights.export_torchscript:main"
chai-mlx-convert-torchscript = "chai_mlx.io.weights.convert_torchscript:main"
chai-mlx-convert-npz = "chai_mlx.io.weights.convert_npz:main"

[tool.setuptools.packages.find]
include = ["chai_mlx*", "cuda_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: opt-in end-to-end tests that download HF weights and run the real pipeline. Run with `CHAI_MLX_RUN_SLOW=1 pytest -q -m slow`.",
]
